Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30327

Client crashes in print_last_query_cost

    XMLWordPrintable

Details

    Description

      --exec $MYSQL --show-query-costs --port=$MASTER_MYPORT -e "show tables in mysql like 'foo'"
      

      bb-11.0 dd26d4f4

      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  __vfprintf_internal (s=0x0, format=0x5628288d0ce3 "%s: %s\n\n", ap=0x7ffe6a93e6a8, mode_flags=0) at vfprintf-internal.c:1328
      1328	vfprintf-internal.c: No such file or directory.
      #0  __vfprintf_internal (s=0x0, format=0x5628288d0ce3 "%s: %s\n\n", ap=0x7ffe6a93e6a8, mode_flags=0) at vfprintf-internal.c:1328
      #1  0x0000562828774fc3 in tee_fprintf (file=0x0, fmt=0x5628288d0ce3 "%s: %s\n\n") at /data/src/bb-11.0/client/mysql.cc:5324
      #2  0x000056282876e6be in print_last_query_cost () at /data/src/bb-11.0/client/mysql.cc:4208
      #3  0x000056282876a9cb in com_go (buffer=0x562828d52780 <glob_buffer>, line=0x0) at /data/src/bb-11.0/client/mysql.cc:3586
      #4  0x00005628287631ef in read_and_execute (interactive=false) at /data/src/bb-11.0/client/mysql.cc:2326
      #5  0x00005628287604dc in main (argc=17, argv=0x562829646060) at /data/src/bb-11.0/client/mysql.cc:1387
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 35m
                  35m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.