MDEV-30327 Client crashes in print_last_query_cost

Fixed by calling init_pager() before tee_fprintf()